implements tdd for 'twos' 'threes' 'fours' 'fives' 'sixs' in tdd methodology , implements those methods in yatzi class