@@ -11,7 +11,7 @@ public int sum(){
 }
 
     public boolean areAllTheSame() {
-    return  this.getRollAsList().stream().allMatch(getRollAsList().getFirst()::equals);
+    return  this.getRollAsList().stream().allMatch(getRollAsList().get(0)::equals);
     }
     public int getSumOfNumbersXInDiceWhenPlacedOnCategoryX(int x) {
         return Math.toIntExact(getRollAsList()
